--- a/HexSphere/HexSphere.CSharp.csproj
+++ b/HexSphere/HexSphere.CSharp.csproj
@@ -63,7 +63,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\src\HexGridMesh.cs" />
     <Compile Include="Assets\src\HexMesh.cs" />
+    <Compile Include="Assets\src\HexVertices.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
